[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools]
packages = []

[project]
name = "ha-askey-rtf3505vw"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "beautifulsoup4==4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "beautifulsoup4==4.14.3",
    "aiohttp==3.13.3",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
