[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "ha-askey-rtf3505vw"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.5",
    "beautifulsoup4==4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "beautifulsoup4==4.14.3",
    "aiohttp==3.13.5",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
